@@ -181,6 +181,24 @@
     ATF_CHECK_MSG(strcmp(x, y) == 0, "%s != %s (%s != %s): " fmt, \
                     #x, #y, x, y, ##__VA_ARGS__)
 
+#define ATF_REQUIRE_MATCH(regexp, string) \
+    ATF_REQUIRE_MSG(atf_utils_grep_string("%s", string, regexp), \
+                    "'%s' not matched in '%s'", regexp, string);
+
+#define ATF_CHECK_MATCH(regexp, string) \
+    ATF_CHECK_MSG(atf_utils_grep_string("%s", string, regexp), \
+                  "'%s' not matched in '%s'", regexp, string);
+
+#define ATF_REQUIRE_MATCH_MSG(regexp, string, fmt, ...) \
+    ATF_REQUIRE_MSG(atf_utils_grep_string("%s", string, regexp), \
+                    "'%s' not matched in '%s': " fmt, regexp, string, \
+                    ##__VA_ARGS__);
+
+#define ATF_CHECK_MATCH_MSG(regexp, string, fmt, ...) \
+    ATF_CHECK_MSG(atf_utils_grep_string("%s", string, regexp), \
+                  "'%s' not matched in '%s': " fmt, regexp, string, \
+                  ##__VA_ARGS__);
+
 #define ATF_CHECK_ERRNO(exp_errno, bool_expr) \
     atf_tc_check_errno(__FILE__, __LINE__, exp_errno, #bool_expr, bool_expr)
 
